--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,18 +12,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
-    "@types/react-dom": "^17.0.5",
+    "@types/react-dom": "^19.0.2",
     "@types/webpack": "^5.28.5",
-    "@types/webpack-dev-server": "^4.7.1",
+    "@types/webpack-dev-server": "^4.7.2",
     "npm-check-updates": "^17.1.13",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
-    "webpack": "^5.38.1",
+    "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
   }
